--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <button type="button" name="calc-btn" class="num-btn" value="7">7</button>
           <button type="button" name="calc-btn" class="num-btn" value="8">8</button>
           <button type="button" name="calc-btn" class="num-btn" value="9">9</button>
+          <button type="button" name="calc-btn" class="num-btn backspace" value="backspace">DEL</button>
       
       
           <button type="button" name="calc-btn" class="num-btn" value="4">4</button>
